Updated names to be more relevant to users
Co-authored-by: Maria Craig <maria@meilisearch.com>

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -37,11 +37,11 @@ For the first iteration of this feature you must compute the vectors on your sid
 
 ```bash
 curl -X POST -H 'content-type: application/json' \
-'localhost:7700/indexes/myvectors/documents' \
+'localhost:7700/indexes/songs/documents' \
 --data-binary '[
-    { "id": 0, "_vectors": [0, 0.8, -0.2], "text": "Hello World" },
-    { "id": 1, "_vectors": [1, -0.2, 0], "text": "Hello Doggy" },
-    { "id": 2, "_vectors": [[0.5, 3, 1], [-0.2, 4, 6]], "text": "Hello People" }
+    { "id": 0, "_vectors": [0, 0.8, -0.2], "title": "Across The Universe" },
+    { "id": 1, "_vectors": [1, -0.2, 0], "title": "All Things Must Pass" },
+    { "id": 2, "_vectors": [[0.5, 3, 1], [-0.2, 4, 6]], "title": "And Your Bird Can Sing" }
 ]'
 ```
 
@@ -51,7 +51,7 @@ You can query the documents with the nearest vector using the default `/search` 
 
 ```bash
 curl -X POST -H 'content-type: application/json' \
-'localhost:7700/indexes/myvectors/search' \
+'localhost:7700/indexes/songs/search' \
 --data-binary '{ "vector": [0, 1, 2] }'
 ```
 
@@ -61,9 +61,9 @@ As part of v1.3.0 Meilisearch will return a similarity score as part of the docu
 ```json
 {
   "hits": [
-    { "id": 0, "_vectors": [0, 0.8, -0.2], "text": "Hello World", "_semanticScore": 0.6754 },
-    { "id": 1, "_vectors": [1, -0.2, 0], "text": "Hello Doggy", "_semanticScore": 0.7546 },
-    { "id": 2, "_vectors": [[0.5, 3, 1], [-0.2, 4, 6]], "text": "Hello People", "_semanticScore": 0.78 }
+    { "id": 0, "_vectors": [0, 0.8, -0.2], "title": "Across The Universe", "_semanticScore": 0.6754 },
+    { "id": 1, "_vectors": [1, -0.2, 0], "title": "All Things Must Pass", "_semanticScore": 0.7546 },
+    { "id": 2, "_vectors": [[0.5, 3, 1], [-0.2, 4, 6]], "title": "And Your Bird Can Sing", "_semanticScore": 0.78 }
   ],
   "query": "",
   "vector": [0, 1, 2],
