--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -160,6 +160,12 @@ This experimental feature can be turned on via the HTTP API using v1.3.0's new `
 
 ⚠️ The experimental feature API can break between Meilisearch versions. Be careful if using it in production.
 
+### Relevancy change on `attribute` ranking rule
+
+Previously, the documents with attributes containing the query words at the beginning of the attribute will be considered more relevant than documents containing the query words at the end of the attributes.
+
+With this change the ranking rule considers the distance to the position of the word in the query rather than the absolute distance to the beginning of the document.
+
 Done by @dureuill in #3771
 
 ## Define fields to search on at search time
