updated Charabia version number

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -162,7 +162,7 @@ This experimental feature can be turned on via the HTTP API using v1.3.0's new `
 
 ### Relevancy change on `attribute` ranking rule
 
-Previously, the documents with attributes containing the query words at the beginning of the attribute will be considered more relevant than documents containing the query words at the end of the attributes.
+Previously, the documents with attributes containing the query words at the beginning of the attribute would be considered more relevant than documents containing the query words at the end of the attributes.
 
 With this change the ranking rule considers the distance to the position of the word in the query rather than the absolute distance to the beginning of the document.
 
@@ -259,7 +259,7 @@ Done by @Kerollmops in (#3612)
 * Enhance Japanese words segmentation (#218) @mosuka
 * Enhance Separator based segmentation (#215) @ManyTheFish 
 
-Done by @ManyTheFish, @mosuka in [#] and in [Charabia v0.7.3](https://github.com/meilisearch/charabia/releases/tag/v0.7.3)
+Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.0](https://github.com/meilisearch/charabia/releases/tag/v0.8.0)
 
 
 ### Other improvements
