--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -77,7 +77,7 @@ As part of v1.3.0 Meilisearch will return a similarity score as part of the docu
 
 🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/product/discussions/677).
 
-⚠️ The experimental feature API can break between Meilisearch versions. Be careful if using it in production.
+⚠️ The experimental feature API can break between Meilisearch versions. Be aware of this if using it in production.
 
 Done by @Kerollmops in #3825
 
@@ -158,7 +158,7 @@ This experimental feature can be turned on via the HTTP API using v1.3.0's new `
 
 🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/product/discussions/674).
 
-⚠️ The experimental feature API can break between Meilisearch versions. Be careful if using it in production.
+⚠️ The experimental feature API can break between Meilisearch versions. Be aware of this if using it in production.
 
 ### Relevancy change on `attribute` ranking rule
 
