--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -257,7 +257,9 @@ Done by @Kerollmops in (#3612)
 ### Language support improvements
 
 * Enhance Japanese words segmentation (#218) @mosuka
-* Enhance Separator based segmentation (#215) @ManyTheFish 
+* Enhance Separator-based Tokenization (#215) @ManyTheFish
+  - words containing `_` are now properly segmented into several words
+  - brackets `{([])}` are no more considered as context separators so words separated by brackets are now considered near together for the proximity ranking rule
 
 Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.0](https://github.com/meilisearch/charabia/releases/tag/v0.8.0)
 
