Added contributor PR

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -270,6 +270,7 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
 * Adds the new experimental features endpoint to enable/disable `scoreDetails` and `vectorStore` experimental features (#3850) @dureuill 
 * Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` which reduces the number of checks (#3788) @Kerollmops 
 * Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
+* Expose lastUpdate and isIndex in `/stats/` endpoint (#3851) @gentcys
 
 
 # Fixes 🐞
@@ -300,6 +301,6 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
   * Fix some typos (#3842) @cuishuang 
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus 
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @gentcys
 - [Charabia](https://github.com/meilisearch/charabia): @mosuka, @vvv 
 
