minor phrasing change

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -109,7 +109,7 @@ curl \
   --data-binary '{ "q": "Batman Returns", "showRankingScoreDetails": true }'
 ```
 
-With this search query parameter in place each document will return with an `_rankingScoreDetails` JSON object. That object will contain a property and a score value for each ranking rule. 
+When `showRankingScoreDetails` is set to `true`, returned documents include a `_rankingScoreDetails` field. This field contains score values for each ranking rule.
 
 ```json 
 "_rankingScoreDetails": {
