Minor issue updates
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -275,8 +275,8 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
 * Improve the Prometheus `/metrics` experimental feature ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Add "meilisearch" prefix to metrics (#3789, #3861) @irevoire @dureuill 
 * Reduce index size (~15%) by removing an internal database (#3819) @loiclec
 * Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill 
-* Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` which reduces the number of checks (#3788) @Kerollmops 
-* Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
+* Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops 
+* Re-enable autobatching for addition and deletion tasks (#3670) @irevoire 
 * Expose lastUpdate and isIndex in `/stats/` endpoint (#3851) @gentcys
 
 
