Suggestions from curqui
Co-authored-by: Clémentine U. - curqui <clementine@meilisearch.com>

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -259,7 +259,7 @@ Alternatively, it is possible to order a single facet by `count`, while other at
 
 Done by @Kerollmops in (#3612)
 
-### Language support improvements
+## Language support improvements
 
 * Enhance Japanese word segmentation (#218) @mosuka
 * Enhance separator-based Tokenization (#215) @ManyTheFish
@@ -269,7 +269,7 @@ Done by @Kerollmops in (#3612)
 Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github.com/meilisearch/charabia/releases/tag/v0.8.1)
 
 
-### Other improvements
+## Other improvements
 
 
 * Improve the Prometheus `/metrics` experimental feature ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Add "meilisearch" prefix to metrics (#3789, #3861) @irevoire @dureuill 
@@ -306,6 +306,6 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
   * Fix some typos (#3842) @cuishuang 
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @gentcys
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @gentcys, @roy9495
 - [Charabia](https://github.com/meilisearch/charabia): @mosuka, @vvv 
 
