phrasing change for experimental

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -82,7 +82,7 @@ When you use vector search, returned documents include a `_semanticScore` field.
 
 🗣️ This feature is experimental and we need your help to improve it! Share your thoughts and feedback on [this GitHub discussion](https://github.com/meilisearch/product/discussions/677).
 
-⚠️ Experimental features are unstable and may be incompatible between Meilisearch versions.
+⚠️ Experimental features may be incompatible between Meilisearch versions.
 
 Done by @Kerollmops in #3825
 
@@ -161,7 +161,7 @@ This experimental feature can be turned on via the HTTP API using v1.3.0's new `
 
 🗣️ This feature is experimental and we need your help to improve it! Share your thoughts and feedback on [this GitHub discussion](https://github.com/meilisearch/product/discussions/674).
 
-⚠️ Experimental features are unstable and may be incompatible between Meilisearch versions.
+⚠️ Experimental features may be incompatible between Meilisearch versions.
 
 ### Relevancy change on `attribute` ranking rule
 
@@ -277,7 +277,6 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
 * Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill 
 * Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops 
 * Re-enable autobatching for addition and deletion tasks (#3670) @irevoire 
-* Expose lastUpdate and isIndex in `/stats/` endpoint (#3851) @gentcys
 
 
 # Fixes 🐞
@@ -306,6 +305,6 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
   * Fix some typos (#3842) @cuishuang 
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @gentcys, @roy9495
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @roy9495
 - [Charabia](https://github.com/meilisearch/charabia): @mosuka, @vvv 
 
