fixed quotes in json

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -253,7 +253,7 @@ Alternatively, it is possible to order a single facet by `count`, while other at
   -X PATCH 'http://localhost:7700/indexes/movies/settings/faceting \
   -H 'Content-Type: application/json'  \
 --data-binary '{
-    "sortFacetValuesBy": {"*": "alpha", "genre": 'count'}
+    "sortFacetValuesBy": {"*": "alpha", "genre": "count"}
   }'
 ```
 
