added max matching words change

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -143,6 +143,8 @@ When `showRankingScoreDetails` is set to `true`, returned documents include a `_
   "exactness": {
     "order": 4,
     "matchType": "noExactMatch",
+    "matchingWords": 0,
+    "maxMatchingWords": 1,
     "score": 0.3333333333333333
   }
 }
