added contributor pr as it got merged since rc

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -279,6 +279,7 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
 * Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill 
 * Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops 
 * Re-enable autobatching for addition and deletion tasks (#3670) @irevoire 
+* Expose lastUpdate and isIndexing in /stats endpoint (#3851) @gentcys
 
 
 # Fixes 🐞
@@ -307,6 +308,6 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
   * Fix some typos (#3842) @cuishuang 
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @roy9495
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @roy9495, @gentcys
 - [Charabia](https://github.com/meilisearch/charabia): @mosuka, @vvv 
 
