Added RC1 updates

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -271,6 +271,11 @@ Done by @Kerollmops in (#3612)
 Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github.com/meilisearch/charabia/releases/tag/v0.8.1)
 
 
+## Display a total count of tasks on the `/tasks/` route
+The `/tasks` route now displays the total number of tasks in the task queue with a `total` property. It also displays the total number of tasks within a specific filter e.g. you can view the total number of successfully processed tasks with `/tasks?statuses=succeeded`. This detail gives insight into the progress of processed tasks over time.
+
+Done by @Kerollmops in (#3889)
+
 ## Other improvements
 
 
@@ -286,6 +291,11 @@ Done by @ManyTheFish, @mosuka in [#3866] and in [Charabia v0.8.1](https://github
 * Fix matching results returned by the `exactness` ranking rules when there are hard separators present (#3824) @dureuill 
 * Fixes an issue where searching for words without `.` doesn't match any string in the index ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
 * Fix an issue around incorrect deletion of documents when using the `disableOnAttributes` typo setting  (#3819) @loiclec
+* Replace the `atty` dependency with the `is-terminal` due to security vulnerability (#3878) @Kerollmops
+* Fix analytics properties name total_received on multiple events (#3877) @dureuill 
+* Adds matchingWords and maxMatchingWords score details (#3885) @dureuill 
+* Fix the analytics of the sort facet values by count feature (#3890) @Kerollmops 
+* Fix the way we compute the 99th percentile (#3891) @Kerollmops
 
 # Misc
 
