removed or moved the rc items based on feedback

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -279,12 +279,11 @@ Done by @Kerollmops in (#3889)
 ## Other improvements
 
 
-* Improve the Prometheus `/metrics` experimental feature ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Add "meilisearch" prefix to metrics (#3789, #3861) @irevoire @dureuill 
+* Improve the Prometheus `/metrics` experimental feature ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Add "meilisearch" prefix to metrics. Exposes lastUpdate and isIndexing in /stats endpoint (#3789, #3861, #3851) @irevoire @dureuill @gentcys
 * Reduce index size (~15%) by removing an internal database (#3819) @loiclec
 * Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill 
 * Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops 
 * Re-enable autobatching for addition and deletion tasks (#3670) @irevoire 
-* Expose lastUpdate and isIndexing in /stats endpoint (#3851) @gentcys
 
 
 # Fixes 🐞
@@ -292,10 +291,7 @@ Done by @Kerollmops in (#3889)
 * Fixes an issue where searching for words without `.` doesn't match any string in the index ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
 * Fix an issue around incorrect deletion of documents when using the `disableOnAttributes` typo setting  (#3819) @loiclec
 * Replace the `atty` dependency with the `is-terminal` due to security vulnerability (#3878) @Kerollmops
-* Fix analytics properties name total_received on multiple events (#3877) @dureuill 
-* Adds matchingWords and maxMatchingWords score details (#3885) @dureuill 
-* Fix the analytics of the sort facet values by count feature (#3890) @Kerollmops 
-* Fix the way we compute the 99th percentile (#3891) @Kerollmops
+
 
 # Misc
 
@@ -316,6 +312,8 @@ Done by @Kerollmops in (#3889)
 * Misc
   * Revert "Improve docker cache" (#3781) @curquiza 
   * Fix some typos (#3842) @cuishuang 
+  * Fix analytics properties name total_received on multiple events (#3877) @dureuill 
+  * Fix the way we compute the 99th percentile (#3891) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @roy9495, @gentcys
