--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -312,7 +312,7 @@ Done by @Kerollmops in (#3889)
 * Misc
   * Revert "Improve docker cache" (#3781) @curquiza 
   * Fix some typos (#3842) @cuishuang 
-  * Fix analytics properties name total_received on multiple events (#3877) @dureuill 
+  * Fix analytics properties on multiple events (#3877) @dureuill 
   * Fix the way we compute the 99th percentile (#3891) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
