--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -279,7 +279,7 @@ Done by @Kerollmops in (#3889)
 ## Other improvements
 
 
-* Improve the Prometheus `/metrics` experimental feature ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Add "meilisearch" prefix to metrics. Exposes lastUpdate and isIndexing in /stats endpoint (#3789, #3861, #3851) @irevoire @dureuill @gentcys
+* Improve the Prometheus `/metrics` experimental feature ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Add "meilisearch" prefix to metrics. Exposes `lastUpdate` and `isIndexing` in` /stats` endpoint (#3789, #3861, #3851) @irevoire @dureuill @gentcys
 * Reduce index size (~15%) by removing an internal database (#3819) @loiclec
 * Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill 
 * Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops 
