--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -212,7 +212,7 @@ Meilisearch will only return document 1.
 Both documents contain the term `"adventure"`, but `"attributesToSearchOn": ["genre"]` instructs Meilisearch to only consider results found on the `genre` field.
 
 
-Done by @ManyTheFish in (#3834)
+Done by @ManyTheFish and @dureuill in (#3834, #3915)
 
 
 ## Search for facet values
@@ -289,6 +289,7 @@ Done by @Kerollmops in (#3889)
 # Fixes 🐞
 * Fix matching results returned by the `exactness` ranking rules when there are hard separators present (#3824) @dureuill 
 * Fixes an issue where searching for words without `.` doesn't match any string in the index ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
+* Fix case-sensitive search result issues with camelCasing.  e.g. a search for `dellonghi` would previously not return a document with `DeLonghi` in it. Note: this deactivates camel case segmentation that was introduced in v1.2.0 (#3921) @ManyTheFish
 * Fix an issue around incorrect deletion of documents when using the `disableOnAttributes` typo setting  (#3819) @loiclec
 * Replace the `atty` dependency with the `is-terminal` due to security vulnerability (#3878) @Kerollmops
 
