--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -11,7 +11,7 @@ Some SDKs might not include all new features—consult the project repository fo
 ---
 ## ⚡ Supercharge your Meilisearch experience
 
-Say goodbye to server deployment and manual updates with [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch). No credit card required.
+Say goodbye to server deployment and manual updates with [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch). Get started with a 14-day free trial! No credit card required.
 
 ---  
 <br/>
@@ -288,8 +288,8 @@ Done by @Kerollmops in (#3889)
 
 # Fixes 🐞
 * Fix matching results returned by the `exactness` ranking rules when there are hard separators present (#3824) @dureuill 
-* Fixes an issue where searching for words without `.` doesn't match any string in the index ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
-* Fix case-sensitive search result issues with camelCasing.  e.g. a search for `dellonghi` would previously not return a document with `DeLonghi` in it. Note: this deactivates camel case segmentation that was introduced in v1.2.0 (#3921) @ManyTheFish
+* Fix an issue where searching for words without `.` doesn't match any string in the index ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
+* Fix case-sensitive search result issues with camelCasing. For example, a search for `dellonghi` would previously not return a document with `DeLonghi` in it. This deactivates camel case segmentation that was introduced in v1.2.0 (#3921) @ManyTheFish
 * Fix an issue around incorrect deletion of documents when using the `disableOnAttributes` typo setting  (#3819) @loiclec
 * Replace the `atty` dependency with the `is-terminal` due to security vulnerability (#3878) @Kerollmops
 
