--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -35,7 +35,7 @@ curl \
 
 ### Sending Vectorized Documents
 
-For the first iteration of this feature you must compute the vectors using a third party tool such as [Hugging Face](https://huggingface.co/), [Cohere](https://cohere.com/), or [OpenAI](https://openai.com/). Once that is done, include them in your documents using the `_vectors` field. Finally, send the documents with vector data to your instance. A single document may contain multiple vectors.
+For the first iteration of this feature you must compute the vectors using a third-party tool such as [Hugging Face](https://huggingface.co/), [Cohere](https://cohere.com/), or [OpenAI](https://openai.com/). Once that is done, include them in your documents using the `_vectors` field. Finally, send the documents with vector data to your instance. A single document may contain multiple vectors.
 
 ⚠️ Vector size must be the same across all documents in a dataset. If vector sizes are inconsistent, Meilisearch will return an error during document addition.
 
