--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -284,6 +284,7 @@ Done by @Kerollmops in (#3889)
 * Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill 
 * Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops 
 * Re-enable autobatching for addition and deletion tasks (#3670) @irevoire 
+* Improvements to the local Meilisearch web interface. Update mini-dashboard to version [v0.2.8](https://github.com/meilisearch/mini-dashboard/releases/tag/v0.2.8) (#3935)  @bidoubiwa
 
 
 # Fixes 🐞
@@ -292,6 +293,8 @@ Done by @Kerollmops in (#3889)
 * Fix case-sensitive search result issues with camelCasing. For example, a search for `dellonghi` would previously not return a document with `DeLonghi` in it. This deactivates camel case segmentation that was introduced in v1.2.0 (#3921) @ManyTheFish
 * Fix an issue around incorrect deletion of documents when using the `disableOnAttributes` typo setting  (#3819) @loiclec
 * Replace the `atty` dependency with the `is-terminal` due to security vulnerability (#3878) @Kerollmops
+* Fix a panic when sorting geo fields represented by strings (#3929) @Kerollmops
+* Fix performance issue on `/stats` by no longer computing total size of the update files folder (#3933) @Kerollmops
 
 
 # Misc
