--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -284,7 +284,7 @@ Done by @Kerollmops in (#3889)
 * Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill 
 * Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops 
 * Re-enable autobatching for addition and deletion tasks (#3670) @irevoire 
-* Improvements to the local Meilisearch web interface. Update mini-dashboard to version [v0.2.8](https://github.com/meilisearch/mini-dashboard/releases/tag/v0.2.8) (#3935)  @bidoubiwa
+* Improve local search preview web interface and update mini-dashboard to version [v0.2.8](https://github.com/meilisearch/mini-dashboard/releases/tag/v0.2.8) (#3935)  @bidoubiwa
 
 
 # Fixes 🐞
