Update following rc4

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -13,7 +13,7 @@ Some SDKs might not include all new features—consult the project repository fo
 
 Say goodbye to server deployment and manual updates with [Meilisearch Cloud](https://www.meilisearch.com/cloud?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch). Get started with a 14-day free trial! No credit card required.
 
----  
+---
 <br/>
 
 # New features and improvements 🔥
@@ -84,13 +84,13 @@ When you use vector search, returned documents include a `_semanticScore` field.
 
 ⚠️ Experimental features may be incompatible between Meilisearch versions.
 
-Done by @Kerollmops in #3825
+Done by @Kerollmops in #3825 and #3948
 
 ## Display ranking scores at search
 
-Use the new `showRankingScore` search parameter to see the ranking scores for returned documents. 
+Use the new `showRankingScore` search parameter to see the ranking scores for returned documents.
 
-```bash 
+```bash
 curl \
   -X POST 'http://localhost:7700/indexes/movies/search' \
   -H 'Content-Type: application/json' \
@@ -99,15 +99,15 @@ curl \
 
 Each returned document will include a `_rankingScore` property displaying a score between 0 and 1. The higher the ranking score, the more relevant the document.
 
-```json 
+```json
 "_rankingScore": 0.8575757575757575,
 ```
 
-### Ranking score details — Experimental 
+### Ranking score details — Experimental
 
-View detailed scores per ranking rule for each document with the experimental `showRankingScoreDetails` search parameter. 
+View detailed scores per ranking rule for each document with the experimental `showRankingScoreDetails` search parameter.
 
-```bash 
+```bash
 curl \
   -X POST 'http://localhost:7700/indexes/movies/search' \
   -H 'Content-Type: application/json' \
@@ -116,7 +116,7 @@ curl \
 
 When `showRankingScoreDetails` is set to `true`, returned documents include a `_rankingScoreDetails` field. This field contains score values for each ranking rule.
 
-```json 
+```json
 "_rankingScoreDetails": {
   "words": {
     "order": 0,
@@ -150,7 +150,7 @@ When `showRankingScoreDetails` is set to `true`, returned documents include a `_
 }
 ```
 
-This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint. 
+This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint.
 
 ```bash
  curl \
@@ -171,11 +171,11 @@ The `attribute` ranking rule now determines relevancy based on the distance to t
 
 Previously, documents with attributes containing search terms at the beginning of the attribute would be considered more relevant than documents containing search terms at the end of an attribute.
 
-Done by @dureuill in #3771
+Done by @dureuill in #3771 and #3949
 
 ## Define fields to search on at search time
 
-`attributesToSearchOn` is a new search parameter accepting an array of strings indicating one or more document attributes. Queries using `attributesToSearchOn` will restrict the search to the indicated attributes. 
+`attributesToSearchOn` is a new search parameter accepting an array of strings indicating one or more document attributes. Queries using `attributesToSearchOn` will restrict the search to the indicated attributes.
 
 Attributes passed to `attributesToSearchOn` must be in the [searchable attributes list](https://www.meilisearch.com/docs/learn/configuration/displayed_searchable_attributes#the-searchableattributes-list).
 
@@ -281,21 +281,22 @@ Done by @Kerollmops in (#3889)
 
 * Improve the Prometheus `/metrics` experimental feature ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Add "meilisearch" prefix to metrics. Exposes `lastUpdate` and `isIndexing` in` /stats` endpoint (#3789, #3861, #3851) @irevoire @dureuill @gentcys
 * Reduce index size (~15%) by removing an internal database (#3819) @loiclec
-* Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill 
-* Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops 
-* Re-enable autobatching for addition and deletion tasks (#3670) @irevoire 
-* Improve local search preview web interface and update mini-dashboard to version [v0.2.8](https://github.com/meilisearch/mini-dashboard/releases/tag/v0.2.8) (#3935)  @bidoubiwa
+* Add new `/experimental-features` endpoint to configure `scoreDetails` and `vectorStore`  (#3850) @dureuill
+* Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` (#3788) @Kerollmops
+* Re-enable autobatching for addition and deletion tasks (#3670) @irevoire
+* Improve local search preview web interface and update mini-dashboard to version [v0.2.11](https://github.com/meilisearch/mini-dashboard/releases/tag/v0.2.8) (#3955)  @bidoubiwa
 
 
 # Fixes 🐞
-* Fix matching results returned by the `exactness` ranking rules when there are hard separators present (#3824) @dureuill 
+* Fix matching results returned by the `exactness` ranking rules when there are hard separators present (#3824) @dureuill
 * Fix an issue where searching for words without `.` doesn't match any string in the index ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
 * Fix case-sensitive search result issues with camelCasing. For example, a search for `dellonghi` would previously not return a document with `DeLonghi` in it. This deactivates camel case segmentation that was introduced in v1.2.0 (#3921) @ManyTheFish
 * Fix an issue around incorrect deletion of documents when using the `disableOnAttributes` typo setting  (#3819) @loiclec
 * Replace the `atty` dependency with the `is-terminal` due to security vulnerability (#3878) @Kerollmops
 * Fix a panic when sorting geo fields represented by strings (#3929) @Kerollmops
 * Fix performance issue on `/stats` by no longer computing total size of the update files folder (#3933) @Kerollmops
-
+* Security: use the new safe `read-txn-no-tls` heed feature (#3952) @Kerollmops
+* Fix an [issue](https://github.com/meilisearch/meilisearch/discussions/3924) when querying number by updating Charabia (#3937) @ManyTheFish
 
 # Misc
 
@@ -309,17 +310,18 @@ Done by @Kerollmops in (#3889)
   * Fix error messages in `check-release.sh` (#3799) @vvv
 
 * Documentation
-  * Move comments above keys in config.toml (#3731) @jirutka 
+  * Move comments above keys in config.toml (#3731) @jirutka
   * Add more documentation to graph-based ranking rule algorithms (#3835) @loiclec
-  * Fix some broken links (#3853) @0xflotus 
+  * Fix some broken links (#3853) @0xflotus
+  * Update UTM campaign (#3953) @macraig
 
 * Misc
-  * Revert "Improve docker cache" (#3781) @curquiza 
-  * Fix some typos (#3842) @cuishuang 
-  * Fix analytics properties on multiple events (#3877) @dureuill 
+  * Revert "Improve docker cache" (#3781) @curquiza
+  * Fix some typos (#3842) @cuishuang
+  * Fix analytics properties on multiple events (#3877) @dureuill
   * Fix the way we compute the 99th percentile (#3891) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus, @roy9495, @gentcys
-- [Charabia](https://github.com/meilisearch/charabia): @mosuka, @vvv 
+- [Charabia](https://github.com/meilisearch/charabia): @mosuka, @vvv
 
