Update after PR merges

--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -10,9 +10,6 @@ Meilisearch v1.4 introduces features to improve the relevancy of the Meilisearch
 
 Some SDKs might not include all new features—consult the project repository for detailed information. Is a feature you need missing from your chosen SDK? Create an issue letting us know you need it, or, for open-source karma points, open a PR implementing it (we'll love you for that ❤️).
 
-<!-- The following line should NOT be put in the official release changelogs, and the link should be added as soon as possible during the pre-release -->
-📖 Meilisearch's official documentation will be ready for the official v1.4.0 release. Meanwhile, work-in-progress documentation is available [here]().
-
 # New features and improvements 🔥
 
 ## Customize text separators
@@ -75,9 +72,10 @@ TBD
 
 * Dependencies upgrade
   * Upgrade dependencies of the CI (#3871, #3969 and #3968)
-  * Upgrade Meilisearch dependencies (TBD) TBD
+  * Upgrade Meilisearch dependencies (#3987) @ManyTheFish
 * CIs and tests
   * Fix benchmarks CI (#3963) @irevoire
+  * Removed unnecessary borrow call that failed nightly tests (#3990) @JannisK89
   * Expose a Puffin server to profile the indexing process (#3913) @Kerollmops
   * Update and fix the Test Suite CI (#3918) @Kerollmops
 * Documentation
@@ -86,5 +84,5 @@ TBD
   * TBD
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): TBD
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @JannisK89
 - [Charabia](https://github.com/meilisearch/charabia): TBD
