Update after PR merges

--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -78,6 +78,7 @@ TBD
   * Removed unnecessary borrow call that failed nightly tests (#3990) @JannisK89
   * Expose a Puffin server to profile the indexing process (#3913) @Kerollmops
   * Update and fix the Test Suite CI (#3918) @Kerollmops
+  * Improve test suite CI for manual trigger events (#3989) @curquiza
 * Documentation
   * Update README.md (#3895 and #3932) @ferdi05 & @Strift
 * Misc
