--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -3,7 +3,7 @@
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.4 introduces features to improve the relevancy of the Meilisearch results by adding three news settings: `nonSeparatorTokens`, `separatorTokens` and `dictionary`.
+Meilisearch v1.4 improves the search result relevancy by introducing three new settings: `nonSeparatorTokens`, `separatorTokens` and `dictionary`.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
