--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -14,7 +14,7 @@ Some SDKs might not include all new features—consult the project repository fo
 
 ## Customize text separators
 
-The Meilisearch word segmentation uses a default list of separators to segment words. This default list might not sometimes fit your use case: the `nonSeparatorTokens`/`separatorTokens`` setting allows you to remove/add some tokens from/to the default list of separators.
+Meilisearch word segmentation uses a list of characters to separate one word from another. The `nonSeparatorTokens` and `separatorTokens` index settings allow you to configure this to better fit your dataset.
 
 To remove tokens:
 
