--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -16,21 +16,22 @@ Some SDKs might not include all new features—consult the project repository fo
 
 Meilisearch word segmentation uses a list of characters to separate one word from another. The `nonSeparatorTokens` and `separatorTokens` index settings allow you to configure this to better fit your dataset.
 
-To remove tokens:
+Add a character to the `separator-tokens` list to use it as a word separator:
+
+```bash
+curl \
+  -X PUT 'http://localhost:7700/indexes/articles/settings/separator-tokens' \
+  -H 'Content-Type: application/json'  \
+  --data-binary '["&sect;", "&sep"]'
+```
+
+Add a character to the `non-separator-tokens` list when you don't want Meilisearch to use it to separate words:
 
 ```bash
 curl \
   -X PUT 'http://localhost:7700/indexes/articles/settings/non-separator-tokens' \
   -H 'Content-Type: application/json'  \
   --data-binary '["@", "#", "&"]'
-```
-
-To add tokens:
-```bash
-curl \
-  -X PUT 'http://localhost:7700/indexes/articles/settings/separator-tokens' \
-  -H 'Content-Type: application/json'  \
-  --data-binary '["&sect;", "&sep"]'
 ```
 
 Done by @ManyTheFish in #3946
