--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -36,7 +36,7 @@ curl \
 
 Done by @ManyTheFish in #3946
 
-## Load a user-defined dictionary
+## Load user-defined dictionaries
 
 The Meilisearch word segmentation relies on separators and language-based dictionaries to segment words. This segmentation could be more accurate on technical or use-case-specific vocabulary (like "G/Box" to say "Gear Box") or proper nouns (like "J. R. R." when parsing "J. R. R. Tolkien"). The `dictionary` setting improves this accuracy by defining a list of words that would be segmented as described in the list.
 
