--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -38,7 +38,7 @@ Done by @ManyTheFish in #3946
 
 ## Load user-defined dictionaries
 
-The Meilisearch word segmentation relies on separators and language-based dictionaries to segment words. This segmentation could be more accurate on technical or use-case-specific vocabulary (like "G/Box" to say "Gear Box") or proper nouns (like "J. R. R." when parsing "J. R. R. Tolkien"). The `dictionary` setting improves this accuracy by defining a list of words that would be segmented as described in the list.
+Meilisearch word segmentation also relies on language-based dictionaries to segment words. Use the `dictionary` index setting to expand the default dictionaries and improve accuracy when working with datasets using domain-specific terms:
 
 ```bash
 curl \
