--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -47,7 +47,7 @@ curl \
   --data-binary '["J. R. R.", "J.R.R."]'
 ```
 
-These feature synergies well with the `stopWords` or the `synonyms` settings allowing to segment words and correctly retrieve what you expect:
+This feature can be used together with the `stopWords` and `synonyms` index settings:
 
 ```json
 {
