--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -71,18 +71,14 @@ TBD
 
 # Misc
 
-* Dependencies upgrade
-  * Upgrade dependencies of the CI (#3871, #3969 and #3968)
   * Upgrade Meilisearch dependencies (#3987) @ManyTheFish
-* CIs and tests
-  * Fix benchmarks CI (#3963) @irevoire
-  * Removed unnecessary borrow call that failed nightly tests (#3990) @JannisK89
-  * Expose a Puffin server to profile the indexing process (#3913) @Kerollmops
-  * Update and fix the Test Suite CI (#3918) @Kerollmops
-  * Improve test suite CI for manual trigger events (#3989) @curquiza
-* Documentation
+  * Upgrade CI dependencies (#3871, #3969 and #3968)
+  * Fix CI benchmarks (#3963) @irevoire
+  * Removed `borrow` call causing failed nightly tests (#3990) @JannisK89
+  * Expose Puffin server to profile the indexing process (#3913) @Kerollmops
+  * Update and fix the CI Test Suite (#3918) @Kerollmops
+  * Improve CI test suite for manual trigger events (#3989) @curquiza
   * Update README.md (#3895 and #3932) @ferdi05 & @Strift
-* Misc
   * TBD
 
 ❤️ Thanks again to our external contributors:
